--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
     "test": "tests"
   },
   "dependencies": {
-    "jest": "^25.1.0"
+    "typescript": "^3.8.2"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@types/jest": "^25.1.3",
+    "jest": "^25.1.0",
+    "ts-jest": "^25.2.1"
+  },
   "scripts": {
     "test": "jest"
   },
