--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "typescript": "^3.8.2"
   },
   "devDependencies": {
+    "@types/node": "^13.9.0",
     "prettier": "^1.19.1",
     "ts-jest": "^25.2.1"
   },
